<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layouts_main_white_bg"
    android:fitsSystemWindows="false"
    tools:context="com.africadevs.toa.ui.FragmentActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_nav"
            android:layout_marginBottom="5dp"
            android:layout_weight="1" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/layouts_main_white_bg"

            android:outlineProvider="none"
            app:itemIconTint="@drawable/prevention_hands_bottom_nav_colors"
            app:itemTextColor="@drawable/prevention_hands_bottom_nav_colors"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/prevention_mask_nav_options" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toolbarRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/prevention_details_toolbar_top_margin_16dp_40dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/prevention_details_toolbar_bg"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_arrow_back_blue_24dp" />

        <TextView
            android:id="@+id/prevention_option_tittle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="24dp"
            android:layout_toEndOf="@+id/backArrow"
            android:layout_toRightOf="@+id/backArrow"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="#414141"
            app:autoSizeTextType="uniform" />


    </RelativeLayout>
</FrameLayout>