<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolabar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:background="@color/layouts_main_white_bg"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="center_horizontal|top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.github.florent37.arclayout.ArcLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:background="@color/layouts_main_white_bg"
                app:arc_cropDirection="cropOutside"
                app:arc_height="90dp"
                app:arc_position="bottom">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />


                <com.flaviofaria.kenburnsview.KenBurnsView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/covid_worms_bg" />

                <ImageView
                    android:id="@+id/toolbar_shadow_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/toolbar_api_version_top_margin"
                    android:background="#e0193150"
                    android:fitsSystemWindows="true" />


            </com.github.florent37.arclayout.ArcLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/toolbar_api_version_top_margin"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title=" " />


            <!--com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_selected_option"
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="-40dp"
                android:transitionName="shared_lottie_icon"

                app:lottie_autoPlay="false"
                app:lottie_loop="true" /-->
            <ImageView
                android:id="@+id/lottie_selected_option"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal|bottom"
                android:scaleType="fitCenter"
                android:src="@drawable/covid_prevention"
                android:transitionName="shared_lottie_icon" />

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="24dp"

                android:layout_marginRight="24dp"
                android:text="@string/prevention_toolbar_title"
                android:visibility="visible"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layouts_main_white_bg"
        android:clipToPadding="false"
        android:paddingTop="5dp"
        android:paddingBottom="?actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>