...
                    android:layout_height="10dp"
                    android:background="@color/layouts_main_white_bg" />
            </com.github.florent37.arclayout.ArcLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/prevention_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false">


...
                android:layout_marginTop="33dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/ic_bg_fragment_main_tbox_green_color"
                android:rotation="348" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_prevention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:clipToPadding="false"
                app:cardCornerRadius="@dimen/main_cards_radius"
...
            </androidx.cardview.widget.CardView>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/diagnosis_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">


            <ImageView
...
                android:layout_marginTop="33dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/ic_bg_fragment_main_tbox_blue_color"
                android:rotation="348" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_diagnosis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                app:cardCornerRadius="@dimen/main_cards_radius"
                app:cardElevation="@dimen/basic_cardview_elevation_3dp"
...
